Bug 237043 - Recipients and subject not saved in email templates
Summary: Recipients and subject not saved in email templates
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks:
 
Reported: 2010-05-10 01:05 UTC by Sabine Faure
Modified: 2010-05-13 00:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-05-10 01:05:05 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kmail
- Click on 'New' button
- Fill in two recipients' email address, enter a subject and write a few words of text
- Go to Message menu/Save as Template
- The email template is saved in the 'templates' folder (see folder view) and is displayed in red until the user clicks on it at least once.
- Double click on the email template to open it

The email template opens correctly but the 'To' and 'Subject:' line edits are empty whereas they were filled in by the user.

Trunk, Svn Rev 1124682
Comment 1 Leo Franchi 2010-05-12 18:20:35 UTC
SVN commit 1125898 by lfranchi:

load headers when loading composer from a template

BUG: 237043


 M  +1 -0      kmcommands.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125898
Comment 2 Sabine Faure 2010-05-13 00:04:25 UTC
It is corrected now.

The recipients, as well as the subject of the email are saved properly when saving an email as a template.

Trunk, Svn Rev 1125914