load headers when loading composer from a template

BUG: 237043

svn path=/trunk/KDE/kdepim/kmail/; revision=1125898